Ctegory API documented
